# CoGeLoT

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .rtx.toml  CITATION.cff  Dockerfile  LICENSE  README.md  model-card.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: datamodule.yaml  evaluate.yaml  evaluate_their_model.yaml  instance_preprocessor.yaml  preprocess.yaml  train.yaml  validate_their_model.yaml
configs/_old/: 00_overfit_single_example.yaml  01_reproduce_vima.yaml  02_vima_xattn_decoder_abs_14tok.yaml  02_vima_xattn_decoder_abs_1tok.yaml  02_vima_xattn_decoder_xpos_1tok.yaml  03_vanilla_xattn_decoder_abs_14tok.yaml  03_vanilla_xattn_decoder_abs_1tok.yaml  03_vanilla_xattn_decoder_alibi_1tok.yaml  04_no_xattn_decoder_xpos_1tok.yaml
configs/action_decoder/: token_per_axis.yaml  vima.yaml
configs/action_encoder/: token_per_axis.yaml  vima.yaml
configs/datamodule/: default.yaml  evaluation.yaml  from_hf.yaml  from_local_files.yaml
configs/debug/: default.yaml  fast_dev_run.yaml  limit_batches.yaml  nccl.yaml  overfit_batches.yaml  overfit_single.yaml  overfit_single_checkpoint.yaml  profiler.yaml  simulate_ddp.yaml
configs/environment/: display.yaml  dmog_1gpu.yaml  dmog_2gpu.yaml  headless.yaml
configs/evaluation_instance_transform/: different_instruction.yaml  gobbledygook_tokens.yaml  gobbledygook_word.yaml  none.yaml  noop.yaml  reworded.yaml  textual.yaml  textual_generic_noun.yaml  textual_gobbledygook_tokens.yaml  textual_gobbledygook_word.yaml  textual_no_noun.yaml  textual_no_texture.yaml
configs/evaluation_prompt_modality/: disable_text.yaml  disable_visual.yaml
configs/experiment/: 00_overfit_dmog_1gpu.yaml  00_overfit_dmog_2gpu.yaml  00_overfit_single_example.yaml  00_overfit_single_example_autoregressive.yaml  00_reproduce_vima.yaml  01_reproduce_vima.yaml  01_their_vima_14tok.yaml  01_their_vima_1tok.yaml  01_their_vima_new_lr.yaml  01_their_vima_no_prompt.yaml  01_their_vima_no_text.yaml  01_their_vima_patches.yaml  01_their_vima_patches_14tok.yaml  01_their_vima_patches_no_prompt.yaml  01_their_vima_patches_no_text.yaml  01_their_vima_shuffle_obj.yaml  01_vima_xattn_decoder_alibi.yaml  01_vima_xattn_decoder_t5.yaml  02_their_vima.yaml  02_their_vima_patches.yaml  02_their_vima_shuffle_obj.yaml  02_vanilla_xattn_decoder_abs.yaml  02_vanilla_xattn_decoder_alibi.yaml  02_vanilla_xattn_decoder_t5.yaml  02_vanilla_xattn_decoder_xpos.yaml  02_vima_xattn_decoder_abs.yaml  02_vima_xattn_decoder_abs_14tok.yaml  02_vima_xattn_decoder_abs_1tok.yaml  02_vima_xattn_decoder_abs_1tok_newlr.yaml  02_vima_xattn_decoder_alibi.yaml  02_vima_xattn_decoder_alibi_14tok.yaml  02_vima_xattn_decoder_alibi_1tok.yaml  02_vima_xattn_decoder_rope_14tok.yaml  02_vima_xattn_decoder_rope_1tok.yaml  02_vima_xattn_decoder_t5.yaml  02_vima_xattn_decoder_t5_1tok.yaml  02_vima_xattn_decoder_xpos.yaml  02_vima_xattn_decoder_xpos_1tok.yaml  03_no_xattn_decoder_abs.yaml  03_no_xattn_decoder_t5.yaml  (+46 more)
configs/hardware/: ddp.yaml  default.yaml  dmog_1gpu.yaml  dmog_2gpu.yaml  eidf_1gpu.yaml  eidf_4gpu.yaml  gpu.yaml  local.yaml  oci_a10.yaml  oci_a100.yaml  oci_v100.yaml
configs/hydra/: default.yaml
configs/learning_rate_scheduler/: constant.yaml  full.yaml  vima.yaml  vima_ratio.yaml
configs/model/: default.yaml  from_hf_repo.yaml  from_their_policy.yaml  from_wandb_run.yaml
configs/model/action_decoder/: token_per_axis.yaml  vima.yaml
configs/model/action_encoder/: token_per_axis.yaml  vima.yaml
configs/model/prompt_modality/: disable_both.yaml
configs/model/transformer_decoder/: gptj_decoder.yaml  prompt_encoder_history_decoder.yaml  roformer_decoder.yaml  t5_decoder.yaml  their_gpt.yaml  their_vima.yaml  torch_decoder_only.yaml  torch_vanilla_decoder.yaml
configs/policy/: alt_vima.yaml  alt_vima_alibi.yaml  conventional.yaml  conventional_alibi.yaml  default.yaml  vima.yaml
configs/sweeps/: 00_overfit_on_single_example.yaml  01_overfit_decoder_hyperparam.yaml  02_overfit_on_single_example_autoregressive.yaml  03_experiment_1.yaml  04_their_vima_compare.yaml  05_ablate_prompt_modality.yaml  06_ablate_given_model.yaml  07_ablate_shuffle_obs.yaml  08_decoder_only.yaml  09_paraphrase_trained.yaml  10_disable_text_train.yaml  11_disable_instruction_train.yaml
configs/trainer/: ddp.yaml  default.yaml  evaluation.yaml  gpu.yaml
configs/transformer_decoder/: decoder_only.yaml  encoder_decoder.yaml  their_vima.yaml
notebooks/: strict_time_limit.ipynb
scripts/: add_their_results.py  debug-run.sh  example.py  run-barrage.sh  run-sweep-1.sh  run-sweep-4.sh  run-sweep.sh  setup-eidf.sh  setup-oci-a100.sh  setup-oracle-a100.sh  submit-dataset-creation-jobs.sh  submit-dataset-upload-jobs.sh  submit-raw-dataset-fix-jobs.sh  submit-reworded-dataset-creation-jobs.sh  submit-upload-dataset-jobs.sh
scripts/slurm/: create-hf-dataset.sh  create-preprocessed-dataset.sh  create-raw-dataset.sh  create-reworded-dataset.sh  download-from-hub.sh  eval-model.sh  evaluate-from-sweep.sh  evaluate-their-model-cpu.sh  evaluate-their-model.sh  evaluate-trained-model.sh  exp-00-overfit-single-example.sh  fix-raw-dataset.sh  parse-original-dataset.sh  preprocess-data.sh  preprocess-instances.sh  unzip-vima.sh  upload-preprocessed-dataset.sh  upload-raw-dataset.sh  upload-to-hub.sh
src/cogelot/: __init__.py  __main__.py  ruff.toml  train.py
src/vima/: __init__.py  prepare_obs.py  prepare_prompt.py  ruff.toml  utils.py
src/vima_bench/: __init__.py  make.py  ruff.toml
src/vimasim/: __init__.py
tests/: conftest.py  test_config_loading.py  test_data_loading.py  test_data_preparation.py  test_dataset_creation.py  test_experiments.py  test_external_access.py  test_hardware.py  test_instance_transforms.py  test_loss.py  test_lr_schedulers.py  test_modelling.py  test_observation_processing.py  test_online_evaluation.py  test_prompt_processing.py  test_prompt_replacers.py  test_stitching.py  test_token_transforms.py  test_tokenizers.py  test_visual_encoders.py
tests/fixtures/: constants.py  data.py  hardware.py  modules.py
(+322 files in other folders)
